--- a/detail.html
+++ b/detail.html
@@ -9,10 +9,46 @@
     <body>
         <div>
             <img src="assests\images\logo.png" height="100" width="150">
+            <a href="login.html" target="_blank">Login</a>
         </div>
-        <div>Header Div</div>
-        <div>Content Div</div>
-        <div>Footer Div</div>    
+        
+        <div>
+            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg">
+            <a href="payment.html">Book Now</a>
+            <h2>Radisson Blu Hotel</h2>
+            <p>RATING</p>
+            <p>5 Star</p>
+            <p>AMENITIES</p>
+            <ul>
+                <li>Room service</li>
+                <li>Restaurant</li>
+                <li>Business center</li>
+                <li>Fitness center</li>
+                <li>Pool</li>
+            </ul>
+            <h5>DESCRIPTION</h5>
+            <p>Radisson Hotels is an international hotel chain
+                 headquartered in the United States. 
+                 A division of the Radisson Hotel Group, 
+                 it operates the brands Radisson Blu, Radisson Red, 
+                 Radisson Collection, Country Inn & Suites,
+                  and Park Inn by Radisson among others.</p>
+        </div>
+        <div>
+            <a href="contact.html" target="_blank">Contact us</a>
+            <a href="https://www.facebook.com/" target="_blank">
+                <img src="assests\images\facebook.png" height="20" width="22">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+                <img src="assests\images\instagram.png" height="20" width="22">
+            </a>
+            <a href="https://www.twitter.com/" target="_blank">
+                <img src="assests\images\twitter.png" height="20" width="22">
+            </a>
+            <br>
+                <p>2020 ROOM SEARCH PVT LTD</p>
+            </br>
+        </div>    
     </body>
 </div>
 
