--- a/payment.html
+++ b/payment.html
@@ -9,10 +9,42 @@
     <body>
         <div>
             <img src="assests\images\logo.png" height="100" width="150">
+            <a href="login.html" target="_blank">Login</a>
         </div>
-        <div>Header Div</div>
-        <div>Content Div</div>
-        <div>Footer Div</div>    
+        <div>
+            <div>
+                <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg">
+                <h2>Radisson Blu Hotal</h2>
+                <p>Near Mahipalpur Extension Nh 8, New Delhi 110037, India</p>
+            </div>
+            <div>
+                <p>
+                    <br><b>Name:</b> Chandan Kumar</br>
+                    <br><b>Number of Adults:</b> 2</br>
+                    <br><b>Check in Date:</b> 25/11/2020</br>
+                    <br><b>Check out Date:</b> 7/12/2020</br>
+                    <br><b>Tariff Breakdown:</b> Rs. 1000 x 2 Adults x 5 Nights</br>
+                    <br><b>Total Amount:</b> Rs. 10000</br>
+                </p>
+                <a href="payment.html">Pay_Now</a>
+            </div>
+        </div>
+        <div>
+            <a href="contact.html" target="_blank">Contact us</a>
+            <br></br>
+            <a href="https://www.facebook.com/" target="_blank">
+                <img src="assests\images\facebook.png" height="20" width="22">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+                <img src="assests\images\instagram.png" height="20" width="22">
+            </a>
+            <a href="https://www.twitter.com/" target="_blank">
+                <img src="assests\images\twitter.png" height="20" width="22">
+            </a>
+            <br>
+                <p>2020 ROOM SEARCH PVT LTD</p>
+            </br>
+        </div>    
     </body>
 </div>
 
