--- a/index.html
+++ b/index.html
@@ -9,10 +9,36 @@
     <body>
         <div>
             <img src="assests\images\logo.png" height="100" width="150">
+            <a href="login.html" target="_blank">Login</a>
         </div>
-        <div>Header Div</div>
-        <div>Content Div</div>
-        <div>Footer Div</div>    
+        <div> 
+            <P>Search Bar</P>
+            <a href="list.html" >
+                <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" height="300" width="300">
+            </a>
+            
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" height="300" width="300">
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" height="300" width="300">
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" height="300" width="300">
+            <br>
+                <a href="index.html">View more>></a>
+            </br>   
+        </div>
+        <div>
+            <a href="contact.html" target="_blank">Contact us</a>
+            <a href="https://www.facebook.com/" target="_blank">
+                <img src="assests\images\facebook.png" height="20" width="22">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+                <img src="assests\images\instagram.png" height="20" width="22">
+            </a>
+            <a href="https://www.twitter.com/" target="_blank">
+                <img src="assests\images\twitter.png" height="20" width="22">
+            </a>
+            <br>
+                <p>2020 ROOM SEARCH PVT LTD</p>
+            </br>
+        </div>    
     </body>
 </div>
 
