--- a/list.html
+++ b/list.html
@@ -9,10 +9,49 @@
     <body>
         <div>
             <img src="assests\images\logo.png" height="100" width="150">
+            <a href="login.html" target="_blank">Login</a>
         </div>
-        <div>Header Div</div>
-        <div>Content Div</div>
-        <div>Footer Div</div>    
+        <div>
+            <ul>
+                <li>
+                    <a href="list.html">List view</a>
+                </li>
+                <li>
+                    <a href="list.html">Map view</a>
+                </li>
+            </ul>
+            <a href="detail.html">
+                <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg">
+                <h3>Radisson Blu Hotal</h3>
+                <p>5 Star</p>
+                <p>New Delhi</p>
+            </a>
+            <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg">
+            <h3>The Lalit New Hotal</h3>
+            <p>4.5 Star</p>
+            <p>New Delhi</p>
+            <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg">
+            <h3>Taj Palace</h3>
+            <p>4 Star</p>
+            <p>New Delhi</p>
+            <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png">
+            <p>MAP VIEW</p>
+        </div>
+        <div>
+            <a href="contact.html" target="_blank">Contact us</a>
+            <a href="https://www.facebook.com/" target="_blank">
+                <img src="assests\images\facebook.png" height="20" width="22">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+                <img src="assests\images\instagram.png" height="20" width="22">
+            </a>
+            <a href="https://www.twitter.com/" target="_blank">
+                <img src="assests\images\twitter.png" height="20" width="22">
+            </a>
+            <br>
+                <p>2020 ROOM SEARCH PVT LTD</p>
+            </br>
+        </div>    
     </body>
 </div>
 
